<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/bottom_bar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@color/transgreyaf"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingLeft="@dimen/text_5">

    <TextView
        android:id="@+id/tv_tuceng"
        style="@style/TextView_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tv_tuceng" />

    <TextView
        android:id="@+id/tv_daohang"
        style="@style/TextView_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tv_daohang"/>

    <TextView
        android:id="@+id/tv_msg"
        style="@style/TextView_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tv_msg"/>

    <TextView
        android:id="@+id/tv_home"
        style="@style/TextView_bottom"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:background="@drawable/home_bdg"
        android:gravity="center"
        android:paddingLeft="@dimen/text_5"
        android:paddingRight="@dimen/text_5"
        android:text="@string/tv_home"/>

    <TextView
        android:id="@+id/tv_tishiquan"
        style="@style/TextView_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tv_tishiquan"/>

    <TextView
        android:id="@+id/tv_dixing"
        style="@style/TextView_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tv_dixing"/>

    <TextView
        android:id="@+id/tv_shezhi"
        style="@style/TextView_bottom"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/tv_shezhi"/>

</LinearLayout>